@@ -1,3 +1,8 @@
+2000-11-29  Mark Mitchell  <mark@codesourcery.com>
+
+	* hashtab.c (higher_prime_number): Use a table, rather than a
+	seive, to find the next prime.
+	
 2000-11-29  Zack Weinberg  <zack@wolery.stanford.edu>
 
 	* aclocal.m4 (LIB_AC_PROG_CC): Moved here from configure.in.
